# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

HarnessTeam = "PL"

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    data = ["//:resource"],
    resources = [
        "//platform-service/modules/slack-service/src/main/resources:resource",
    ],
    visibility = ["//platform-service/service:__subpackages__"],
    runtime_deps = [
        "//platform-service/modules/slack-service/src/main/resources",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
    ],
    exports = [
        "//slack-module:module",
        "//slack-module/src/main/java/io/harness/slack/resource:module"
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    data = [
        "//platform-service/modules/slack-service/src/main/resources:resource",
        "//platform-service/modules/slack-service/src/test/resources:resource",
    ],
    resources = [
        "//:resource",
        "//platform-service/modules/slack-service/src/main/resources:resource",
        "//platform-service/modules/slack-service/src/test/resources:resource",
    ],
    visibility = ["//platform-service/service:__subpackages__"],
    runtime_deps = [
        "//platform-service/modules/slack-service/src/main/resources",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
    ],
    exports = [
        ":module",
    ],
)

run_tests()

run_analysis()
