load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_pull", "container_push")
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_commit_layer")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

container_run_and_commit_layer(
    name = "java-go-run",
    image = "@ubi-java-base//image",
    docker_run_flags = ["--user=root"],
    commands = [
        "microdnf install yum",
        "mkdir -p /deployments",
        "yum install -y mongodb-org-shell google-cloud-cli autoconf binutils gdb glibc-devel redhat-rpm-config rpm-build wget git gcc gcc-c++ jq bc zlib-devel --nodocs --skip-broken",
        "curl -Lo /usr/local/bin/bazel https://github.com/bazelbuild/bazelisk/releases/download/v1.7.4/bazelisk-linux-amd64",
        "chown root:root /usr/local/bin/bazel",
        "chmod 0755 /usr/local/bin/bazel",
        "cd /",
        "rm -rf /tmp/*",
        "yum clean all",
        "rm -rf /var/tmp/yum-*",
        "curl -O https://dl.google.com/go/go1.18.linux-amd64.tar.gz",
        "tar -xvf go1.18.linux-amd64.tar.gz",
        "mv go/ /usr/local/",
        "rm -rf go1.18.linux-amd64.tar.gz",
    ],
    tags = [
            "manual",
            "no-cache",
            "no-ide",
        ],
)

pkg_tar(
    name = "files",
    srcs = [
        "run-java.sh",
    ],
    mode = "0500",
    owner = "65534.65534",
    package_dir = "/deployments",
    tags = [
                "manual",
                "no-cache",
                "no-ide",
            ],
)

pkg_tar(
    name = "repos",
    srcs = [
        "google-cloud-sdk.repo",
        "mongodb-org-4.4.repo",
    ],
    mode = "0500",
    owner = "0.0",
    package_dir = "/etc/yum.repos.d/",
    tags = [
                "manual",
                "no-cache",
                "no-ide",
            ],
)

container_image(
    name = "java-go-image",
    base = "@ubi-java-base//image",
    layers = [
        ":java-go-run"
        ],
    user = "65534",
    workdir = "/opt/harness",
    cmd = [
        "/deployments/run-java.sh",
        ],
    tars = [
        ":files",
        ":repos",
    ],
    env = {
        "JAVA_APP_DIR": "/deployments",
        "JAVA_MAJOR_VERSION": "11",
        "LC_ALL": "en_US.UTF-8",
        "CC": "/usr/bin/gcc",
        "CXX": "/usr/bin/g++",
        "PATH": "$${PATH}:/opt/gsutil:/usr/local/go/bin",
        "GOROOT": "/usr/local/go",
        "GOPATH": "/usr/local",
    },
    tags = [
            "manual",
            "no-cache",
            "no-ide",
        ],
        visibility = ["//visibility:public"],
)

container_push(
    name = "java-go-push",
    format = "Docker",
    image = "java-go-image",
    registry = "us.gcr.io",
    repository = "platform-205701/harness/java-go-bazel-test",
    tag = "latest-test",
    tags = [
            "manual",
            "no-cache",
            "no-ide",
        ],
)
